# src/api/shoppingCarts/model.ts
@@ -1,21 +1,24 @@
-const Contenedor = require('../../store/contenedor.js')
-const shoppingCartDB = new Contenedor('shoppingCarts')
+import { shoppingCartDao } from '../../store/daos'
 
 function addShoppingCartById() {
-    return shoppingCartDB.save({})
-}
-
-function getShoppingCartById(id) {
-    return shoppingCartDB.getById(id)
-}
-
-function deleteShoppingCartById(id) {
-    return shoppingCartDB.deleteById(id)
+  return shoppingCartDao.add({})
 }
 
 function updateShoppingCart({ id, products }) {
-    return shoppingCartDB.updateById({ id, products })
+  return shoppingCartDao.updateById({ id, products })
 }
 
-export default { getShoppingCartById, updateShoppingCart, deleteShoppingCartById, addShoppingCartById }
-   
+function getShoppingCartById(id) {
+  return shoppingCartDao.getById(id)
+}
+
+function deleteShoppingCartById(id) {
+  return shoppingCartDao.deleteById(id)
+}
+
+export default {
+  getShoppingCartById,
+  updateShoppingCart,
+  addShoppingCartById,
+  deleteShoppingCartById,
+}
